* Add native JSON support to the JSON methods and make them comply with ECMA specs. [FuseJS LH #22] [jddalton, kitsg, Tobie Langel]

* Optimize fuse.dom.Element modification methods and add append(), prepend(), insertBefore(), and insertAfter() methods. [FuseJS LH #53] [jddalton, kangax, kitsg]

* Add `defaults` object to constructors to store default properties / options. [jddalton, Thomas Aylott]

* Add fuse.dom.Event methods isStopped(), isCancelled(), isBubbling(), cancel(), stopBubbling(), and fuse.dom.Document method isLoaded(). [jddalton]
  Note: Backwards compatibility warning.

* Fix fuse.Fusebox'ed Array#map when the SKIP_METHODS_RETURNING_ARRAYS true. [jddalton]

* Add fuse.dom.Event decorator and new Event API. [FuseJS LH#29] [Brandon Aaron, jddalton]
  Note: Backwards compatibility warning.

* Ensure Fuse.Fusebox'ed String#search passes the correct arguments to its internal method. [jddalton]

* Make fuse.dom.Element statics extendByTag(), addPlugins(), and addMixins() automatically add methods to fuse.dom.NodeList's prototype. [jddalton]

* Ensure fuse(document).viewport works with documents from iframes. [jddalton]

* Fix cross-browser bugs with fuse.String match(), search(), split() and fuse.RegExp exec(), test(). [FuseJS LH #42] [jddalton, kitsg, Steve Levithan]

* Make the fuse.Fusebox'ed Object constructor, when called as a function and passed a native RegExp instance, return a Fuseboxed RegExp instance. [jddalton]

* Fix fuse.Template's cache and maintain compatibility with Prototype's Template class. [jddalton]

* Fix fuse.Fusebox'ed String#match and RegExp#exec to allow returning arrays containing undefined values. [jddalton]

* Fix Opera 9.25 bug with fuse.String#lastIndexOf and add new feature test `STRING_LAST_INDEX_OF_BUGGY_WITH_NEGATIVE_OR_NAN_POSITION`. [jddalton]
